Prepare for 3.0.1xx servicing
We were bumping targeting pack, framework-dependent default
runtime version, and self-contained default (latest) runtime
version in unison. This only works for previews where these
versions are all the same always. Now that we're servicing 3.0,
we:

1. Pin targeting packs to 3.0.0
2. Fix default framework-dependent runtime version at 3.0.0

This change also:

* Removes dependencies on legacy/internal netcoreapp packages. We
  now use Microsoft.NETCore.App.Internal version exclusively to
  calculate the blob storage path for core-setup.

* Uses PackageDownload for all templates, including
  latest. PackageReference had been used for latest only because
  it hid another bug with the netcoreapp reference of
  redist.csproj that is fixed here. That reference is now a
  FrameworkReference as it should be.

* Removes a bunch of shenanigans from
  GenerateBundledVersions.props that were causing issues with
  above. One casualty of that is that we hard code the RID lists
  for runtime pack, which I don't think is too bad, and actually
  will make it easier to merge in source build patches.

* Cleans up how runtime and targeting pack versions are
  referenced throughout, removing incorrect assumptions about
  them being the same.

* Incorporates a prior closed PR to use suffixed version for blob
  storage, even when assets coming from blob storage are
  stabilized. It needed changes to merge with this.

Note:

* A similar theoretical servicing issue exists for the versions
  of apphost, hostfxr, shared host, which are still assumed to be
  the same as the runtime version in several places. If we choose
  to service those independently, more work is required.

* There will be a 3.0.1 ASP.NET targeting pack, and so we will
  have to unpin that once it is ready. This change establishes
  the baseline of all targeting packs being pinnned, and they can
  be unpinned in the (hopefully rare) cases where they need to be
  serviced.

--- a/eng/Versions.props
+++ b/eng/Versions.props
@@ -12,7 +12,7 @@
     <PreReleaseVersionLabel>preview</PreReleaseVersionLabel>
   </PropertyGroup>
   <PropertyGroup>
-    <MicrosoftDotnetToolsetInternalPackageVersion>3.0.101-servicing.19503.4</MicrosoftDotnetToolsetInternalPackageVersion>
+    <MicrosoftDotnetToolsetInternalPackageVersion>3.0.101-servicing.19502.7</MicrosoftDotnetToolsetInternalPackageVersion>
   </PropertyGroup>
   <PropertyGroup>
     <!-- Dependency from https://github.com/dotnet/winforms -->
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <!-- Dependencies from https://github.com/dotnet/cli -->
-    <MicrosoftDotNetMSBuildSdkResolverPackageVersion>3.0.101-servicing.19503.1</MicrosoftDotNetMSBuildSdkResolverPackageVersion>
+    <MicrosoftDotNetMSBuildSdkResolverPackageVersion>3.0.101-servicing.19502.3</MicrosoftDotNetMSBuildSdkResolverPackageVersion>
   </PropertyGroup>
   <PropertyGroup>
     <MicroBuildCorePackageVersion>0.2.0</MicroBuildCorePackageVersion>
@@ -44,23 +44,31 @@
     <MicrosoftNETBuildExtensionsPackageVersion>$(MicrosoftNETSdkPackageVersion)</MicrosoftNETBuildExtensionsPackageVersion>
   </PropertyGroup>
   <PropertyGroup>
-    <MicrosoftNETCoreAppRuntimewinx64PackageVersion>3.0.1-servicing-19502-09</MicrosoftNETCoreAppRuntimewinx64PackageVersion>
-    <MicrosoftNETCoreAppPackageVersion>3.0.1-servicing-19502-09</MicrosoftNETCoreAppPackageVersion>
-    <MicrosoftNETCoreAppInternalPackageVersion>$(MicrosoftNETCoreAppPackageVersion)</MicrosoftNETCoreAppInternalPackageVersion>
-    <MicrosoftNETCoreDotNetAppHostPackageVersion>3.0.1-servicing-19502-09</MicrosoftNETCoreDotNetAppHostPackageVersion>
-    <MicrosoftNETCoreDotNetHostResolverPackageVersion>3.0.1-servicing-19502-09</MicrosoftNETCoreDotNetHostResolverPackageVersion>
-    <SharedHostVersion>$(MicrosoftNETCoreDotNetHostResolverPackageVersion)</SharedHostVersion>
-    <HostFxrVersion>$(MicrosoftNETCoreDotNetAppHostPackageVersion)</HostFxrVersion>
-    <MicrosoftNETCoreAppRefPackageVersion>3.0.1-servicing-19502-09</MicrosoftNETCoreAppRefPackageVersion>
-    <NetCoreAppTargetingPackVersion>$(MicrosoftNETCoreAppRefPackageVersion)</NetCoreAppTargetingPackVersion>
-    <NetCoreAppHostPackVersion>$(MicrosoftNETCoreDotNetAppHostPackageVersion)</NetCoreAppHostPackVersion>
-    <NETStandardLibraryRefPackageVersion>2.1.0-servicing-19502-09</NETStandardLibraryRefPackageVersion>
-    <WindowsDesktopTargetingPackVersion>$(MicrosoftNETCoreAppRefPackageVersion)</WindowsDesktopTargetingPackVersion>
-    <AspNetCoreVersion>$(MicrosoftAspNetCoreAppRuntimeWinX64PackageVersion)</AspNetCoreVersion>
-    <AspNetTargetingPackVersion>$(MicrosoftAspNetCoreAppRefPackageVersion)</AspNetTargetingPackVersion>
-    <MicrosoftWindowsDesktopAppRuntimewinx64PackageVersion>3.0.1-servicing-19502-09</MicrosoftWindowsDesktopAppRuntimewinx64PackageVersion>
-    <MicrosoftWindowsDesktopAppPackageVersion>3.0.1-servicing-19502-09</MicrosoftWindowsDesktopAppPackageVersion>
-    <MicrosoftWindowsDesktopPackageVersion>$(MicrosoftWindowsDesktopAppPackageVersion)</MicrosoftWindowsDesktopPackageVersion>
+    <!-- Dependencies from https://github.com/dotnet/corefx -->
+    <MicrosoftNETCorePlatformsPackageVersion>3.0.1-servicing.19501.4</MicrosoftNETCorePlatformsPackageVersion>
+  </PropertyGroup>
+  <PropertyGroup>
+    <!-- Dependencies from https://github.com/dotnet/core-setup -->
+    <MicrosoftNETCoreAppInternalPackageVersion>3.0.1-servicing-19502-01</MicrosoftNETCoreAppInternalPackageVersion>
+    <MicrosoftNETCoreAppRuntimewinx64PackageVersion>3.0.1-servicing-19502-01</MicrosoftNETCoreAppRuntimewinx64PackageVersion>
+    <MicrosoftNETCoreAppHostwinx64PackageVersion>3.0.1-servicing-19502-01</MicrosoftNETCoreAppHostwinx64PackageVersion>
+    <MicrosoftNETCoreAppRefPackageVersion>3.0.0</MicrosoftNETCoreAppRefPackageVersion>
+    <MicrosoftNETCoreDotNetHostResolverPackageVersion>3.0.1-servicing-19502-01</MicrosoftNETCoreDotNetHostResolverPackageVersion>
+    <MicrosoftWindowsDesktopAppRuntimewinx64PackageVersion>3.0.1-servicing-19502-01</MicrosoftWindowsDesktopAppRuntimewinx64PackageVersion>
+    <MicrosoftWindowsDesktopAppRefPackageVersion>3.0.0</MicrosoftWindowsDesktopAppRefPackageVersion>
+    <NETStandardLibraryRefPackageVersion>2.1.0</NETStandardLibraryRefPackageVersion>
+  </PropertyGroup>
+  <PropertyGroup>
+    <!-- Runtime and Apphost pack versions are the same for all RIDs. We flow the x64    -->
+    <!-- version above and create aliases without the winx64 here for clarity elsewhere. -->
+    <MicrosoftNETCoreAppHostPackageVersion>$(MicrosoftNETCoreAppHostwinx64PackageVersion)</MicrosoftNETCoreAppHostPackageVersion>
+    <MicrosoftNETCoreAppRuntimePackageVersion>$(MicrosoftNETCoreAppRuntimewinx64PackageVersion)</MicrosoftNETCoreAppRuntimePackageVersion>
+    <MicrosoftAspNetCoreAppRuntimePackageVersion>$(MicrosoftAspNetCoreAppRuntimewinx64PackageVersion)</MicrosoftAspNetCoreAppRuntimePackageVersion>
+    <MicrosoftWindowsDesktopAppRuntimePackageVersion>$(MicrosoftWindowsDesktopAppRuntimewinx64PackageVersion)</MicrosoftWindowsDesktopAppRuntimePackageVersion>
+  </PropertyGroup>
+  <PropertyGroup>
+    <HostFxrVersion>$(MicrosoftNETCoreAppRuntimePackageVersion)</HostFxrVersion>
+    <SharedHostVersion>$(MicrosoftNETCoreAppRuntimePackageVersion)</SharedHostVersion>
   </PropertyGroup>
   <PropertyGroup>
     <!-- 3.0 Template versions -->
@@ -70,7 +78,7 @@
     <MicrosoftDotNetCommonItemTemplates30PackageVersion>2.0.0-preview8.19373.1</MicrosoftDotNetCommonItemTemplates30PackageVersion>
     <MicrosoftDotNetCommonProjectTemplates30PackageVersion>$(MicrosoftDotNetCommonItemTemplates30PackageVersion)</MicrosoftDotNetCommonProjectTemplates30PackageVersion>
     <MicrosoftDotNetTestProjectTemplates30PackageVersion>1.0.2-beta4.19354.2</MicrosoftDotNetTestProjectTemplates30PackageVersion>
-    <AspNetCorePackageVersionFor30Templates>$(AspNetCoreVersion)</AspNetCorePackageVersionFor30Templates>
+    <AspNetCorePackageVersionFor30Templates>$(MicrosoftAspNetCoreAppRuntimePackageVersion)</AspNetCorePackageVersionFor30Templates>
     <!-- 2.2 Template versions -->
     <NUnit3Templates22PackageVersion>1.6.0</NUnit3Templates22PackageVersion>
     <MicrosoftDotNetCommonItemTemplates22PackageVersion>1.0.2-beta4</MicrosoftDotNetCommonItemTemplates22PackageVersion>
