--- a/src/redist/targets/LinuxNativeInstallerDependencyVersions.targets
+++ b/src/redist/targets/LinuxNativeInstallerDependencyVersions.targets
@@ -1,43 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
   <Target Name="CalculateLinuxNativeInstallerDependencyVersions">
-    <PropertyGroup>
-      <MicrosoftNETCoreAppPatchSeparatorIndex>$([MSBuild]::Add($(MicrosoftNETCoreAppRuntimePackageVersion.IndexOf('.')), 1))</MicrosoftNETCoreAppPatchSeparatorIndex>
-      <MicrosoftNETCoreAppPatchSeparatorIndex>$(MicrosoftNETCoreAppRuntimePackageVersion.IndexOf('.', $(MicrosoftNETCoreAppPatchSeparatorIndex)))</MicrosoftNETCoreAppPatchSeparatorIndex>
-      <MicrosoftNETCoreAppMajorMinorVersion>$(MicrosoftNETCoreAppRuntimePackageVersion.Substring(0, $(MicrosoftNETCoreAppPatchSeparatorIndex)))</MicrosoftNETCoreAppMajorMinorVersion>
+      <GetLinuxNativeInstallerDependencyVersions PackageVersion="$(MicrosoftNETCoreAppRuntimePackageVersion)">
+        <Output TaskParameter="VersionWithTilde" PropertyName="MicrosoftNETCoreAppRuntimePackageVersionWithTilde" />
+        <Output TaskParameter="MajorMinorVersion" PropertyName="MicrosoftNETCoreAppMajorMinorVersion" />
+        <Output TaskParameter="MajorMinorPatchVersion" PropertyName="MicrosoftNETCoreAppMajorMinorPatchVersion" />
 
-      <MicrosoftNETCoreAppVersionPreReleaseSeparator>$(MicrosoftNETCoreAppRuntimePackageVersion.IndexOf('-'))</MicrosoftNETCoreAppVersionPreReleaseSeparator>
-      <MicrosoftNETCoreAppMajorMinorPatchVersion>$(MicrosoftNETCoreAppRuntimePackageVersion)</MicrosoftNETCoreAppMajorMinorPatchVersion>
-      <MicrosoftNETCoreAppMajorMinorPatchVersion Condition=" '$(MicrosoftNETCoreAppVersionPreReleaseSeparator)' != -1 ">$(MicrosoftWindowsDesktopAppRuntimePackageVersion.Substring(0, $(MicrosoftNETCoreAppVersionPreReleaseSeparator)))</MicrosoftNETCoreAppMajorMinorPatchVersion>
-      <MicrosoftNETCoreAppVersionPreReleaseSeparatorStartIndex>$([MSBuild]::Add($(MicrosoftNETCoreAppVersionPreReleaseSeparator), 1))</MicrosoftNETCoreAppVersionPreReleaseSeparatorStartIndex>
-      <MicrosoftNETCoreVersionSuffix Condition=" '$(MicrosoftNETCoreAppVersionPreReleaseSeparator)' != -1 ">$(MicrosoftWindowsDesktopAppRuntimePackageVersion.Substring($(MicrosoftNETCoreAppVersionPreReleaseSeparatorStartIndex)))</MicrosoftNETCoreVersionSuffix>
-      <MicrosoftNETCoreAppPackageVersionWithTilde>$(MicrosoftNETCoreAppMajorMinorPatchVersion)</MicrosoftNETCoreAppPackageVersionWithTilde>
-      <MicrosoftNETCoreAppPackageVersionWithTilde Condition=" '$(MicrosoftNETCoreAppVersionPreReleaseSeparator)' != -1 ">$(MicrosoftNETCoreAppMajorMinorPatchVersion)~$(MicrosoftNETCoreVersionSuffix)</MicrosoftNETCoreAppPackageVersionWithTilde>
+      <GetLinuxNativeInstallerDependencyVersions>
 
-      <NetStandardTargetingPackVersionPreReleaseSeparator>$(NETStandardLibraryRefPackageVersion.IndexOf('-'))</NetStandardTargetingPackVersionPreReleaseSeparator>
-      <NetStandardTargetingPackMajorMinorPatchVersion>$(NETStandardLibraryRefPackageVersion)</NetStandardTargetingPackMajorMinorPatchVersion>
-      <NetStandardTargetingPackMajorMinorPatchVersion Condition=" '$(NetStandardTargetingPackVersionPreReleaseSeparator)' != -1 ">$(NETStandardLibraryRefPackageVersion.Substring(0, $(NetStandardTargetingPackVersionPreReleaseSeparator)))</NetStandardTargetingPackMajorMinorPatchVersion>
-      <NetStandardTargetingPackVersionPreReleaseSeparatorStartIndex>$([MSBuild]::Add($(NetStandardTargetingPackVersionPreReleaseSeparator), 1))</NetStandardTargetingPackVersionPreReleaseSeparatorStartIndex>
-      <NetStandardTargetingPackVersionSuffix Condition=" '$(NetStandardTargetingPackVersionPreReleaseSeparator)' != -1 ">$(NETStandardLibraryRefPackageVersion.Substring($(NetStandardTargetingPackVersionPreReleaseSeparatorStartIndex)))</NetStandardTargetingPackVersionSuffix>
-      <NetStandardTargetingPackPackageVersionWithTilde>$(NetStandardTargetingPackMajorMinorPatchVersion)</NetStandardTargetingPackPackageVersionWithTilde>
-      <NetStandardTargetingPackPackageVersionWithTilde Condition=" '$(NetStandardTargetingPackVersionPreReleaseSeparator)' != -1 ">$(NetStandardTargetingPackMajorMinorPatchVersion)~$(NetStandardTargetingPackVersionSuffix)</NetStandardTargetingPackPackageVersionWithTilde>
+      <GetLinuxNativeInstallerDependencyVersions PackageVersion="$(MicrosoftNETCoreAppRefPackageVersion)">
+        <Output TaskParameter="VersionWithTilde" PropertyName="MicrosoftNETCoreAppRefPackageVersionWithTilde" />
+      <GetLinuxNativeInstallerDependencyVersions>
 
-      <AspNetCoreVersionPatchSeparatorIndex>$([MSBuild]::Add($(MicrosoftAspNetCoreAppRuntimePackageVersion.IndexOf('.')), 1))</AspNetCoreVersionPatchSeparatorIndex>
-      <AspNetCoreVersionPatchSeparatorIndex>$(MicrosoftAspNetCoreAppRuntimePackageVersion.IndexOf('.', $(AspNetCoreVersionPatchSeparatorIndex)))</AspNetCoreVersionPatchSeparatorIndex>
-      <AspNetCoreMajorMinorVersion>$(MicrosoftAspNetCoreAppRuntimePackageVersion.Substring(0, $(AspNetCoreVersionPatchSeparatorIndex)))</AspNetCoreMajorMinorVersion>
+      <GetLinuxNativeInstallerDependencyVersions PackageVersion="$(MicrosoftAspNetCoreAppRuntimePackageVersion)">
+        <Output TaskParameter="VersionWithTilde" PropertyName="AspNetCoreRuntimeVersionWithTilde">
+        <Output TaskParameter="MajorMinorVersion" PropertyName="AspNetCoreMajorMinorVersion">
+        <Output TaskParameter="MajorMinorVersion" PropertyName="AspNetCoreMajorMinorPatchVersion" />
+      </GetLinuxNativeInstallerDependencyVersions>
 
-      <AspNetCoreVersionPreReleaseSeparator>$(MicrosoftAspNetCoreAppRuntimePackageVersion.IndexOf('-'))</AspNetCoreVersionPreReleaseSeparator>
-      <AspNetCoreMajorMinorPatchVersion>$(MicrosoftAspNetCoreAppRuntimePackageVersion)</AspNetCoreMajorMinorPatchVersion>
-      <AspNetCoreMajorMinorPatchVersion Condition=" '$(AspNetCoreVersionPreReleaseSeparator)' != -1 ">$(MicrosoftAspNetCoreAppRuntimePackageVersion.Substring(0, $(AspNetCoreVersionPreReleaseSeparator)))</AspNetCoreMajorMinorPatchVersion>
-      <AspNetCoreVersionPreReleaseSeparatorStartIndex>$([MSBuild]::Add($(AspNetCoreVersionPreReleaseSeparator), 1))</AspNetCoreVersionPreReleaseSeparatorStartIndex>
-      <AspNetCoreVersionSuffix Condition=" '$(AspNetCoreVersionPreReleaseSeparator)' != -1 ">$(MicrosoftAspNetCoreAppRuntimePackageVersion.Substring($(AspNetCoreVersionPreReleaseSeparatorStartIndex)))</AspNetCoreVersionSuffix>
-      <AspNetCoreVersionWithTilde>$(AspNetCoreMajorMinorPatchVersion)</AspNetCoreVersionWithTilde>
-      <AspNetCoreVersionWithTilde Condition=" '$(AspNetCoreVersionPreReleaseSeparator)' != -1 ">$(AspNetCoreMajorMinorPatchVersion)~$(AspNetCoreVersionSuffix)</AspNetCoreVersionWithTilde>
+      <GetLinuxNativeInstallerDependencyVersions  PackageVersion="$(MicrosoftAspNetCoreAppRefPackageVersion)">
+        <Output TaskParameter="VersionWithTilde" PropertyName="AspNetCoreRefVersionWithTilde">
+      </GetLinuxNativeInstallerDependencyVersions>
 
-      <HostFxrVersionPatchSeparatorIndex>$([MSBuild]::Add($(HostFxrVersion.IndexOf('.')), 1))</HostFxrVersionPatchSeparatorIndex>
-      <HostFxrVersionPatchSeparatorIndex>$(HostFxrVersion.IndexOf('.', $(HostFxrVersionPatchSeparatorIndex)))</HostFxrVersionPatchSeparatorIndex>
-      <HostFxrMajorMinorVersion>$(HostFxrVersion.Substring(0, $(HostFxrVersionPatchSeparatorIndex)))</HostFxrMajorMinorVersion>
+      <GetLinuxNativeInstallerDependencyVersions PackageVersion="$(HostFxrVersion)">
+        <Output TaskParameter="MajorMinorVersion" PropertyName="HostFxrMajorMinorVersion" />
+      </GetLinuxNativeInstallerDependencyVersions>
 
-    </PropertyGroup>
+      <GetLinuxNativeInstallerDependencyVersions PackageVErsion="$(MicrosoftNETStandardLibraryRefPackageVersion)">
+       <Output TaskParameter="VersionWithTidle" PropertyName="NetStandardTargetingPackPackageVersionWithTilde" />
+       <Output TaskParameter="MajorMinorVersion" PropertyName="NetStandardTargetingPackMajorMinorPatchVersion" />
+       <Output TaskParameter="MajorMinorPatchVersion" PropertyName="NetStandardTargetingPackMajorMinorPatchVersion" />
+      </GetLinuxNativeInstallerDependencyVersions>
+    </Target>
   </Target>
 </Project>
