--- a/src/redist/targets/packaging/deb/dotnet-debian_config.json
+++ b/src/redist/targets/packaging/deb/dotnet-debian_config.json
@@ -30,10 +30,10 @@
 
     "debian_dependencies":{
         "%SHARED_FRAMEWORK_DEBIAN_PACKAGE_NAME%": { "package_version": "%SHARED_FRAMEWORK_DEBIAN_PACKAGE_VERSION%" }%SHARED_FRAMEWORK_DEBIAN_PACKAGE_ADDITIONAL_DEPENDENCY%,
-        "%NETCOREAPP_TARGETING_PACK_DEBIAN_PACKAGE_NAME%": { "package_version": "%SHARED_FRAMEWORK_DEBIAN_PACKAGE_VERSION%" },
+        "%NETCOREAPP_TARGETING_PACK_DEBIAN_PACKAGE_NAME%": { "package_version": "REF_DEBIAN_PACKAGE_VERSION%" },
         "%NETCORE_APPHOST_PACK_DEBIAN_PACKAGE_NAME%": { "package_version": "%SHARED_FRAMEWORK_DEBIAN_PACKAGE_VERSION%" },
         "%NETSTANDARD_TARGETING_PACK_DEBIAN_PACKAGE_NAME%": { "package_version": "%NET_STANDARD_DEBIAN_PACKAGE_VERSION%" },
         "%ASPNETCORE_SHAREDFX_DEBIAN_PACKAGE_NAME%": { "package_version": "%ASPNETCORE_SHAREDFX_DEBIAN_PACKAGE_VERSION%" },
-        "%ASPNET_TARGETING_PACK_DEBIAN_PACKAGE_NAME%": { "package_version": "%ASPNETCORE_SHAREDFX_DEBIAN_PACKAGE_VERSION%" }
+        "%ASPNET_TARGETING_PACK_DEBIAN_PACKAGE_NAME%": { "package_version": "%ASPNETCORE_REF_SHAREDFX_DEBIAN_PACKAGE_VERSION%" }
     }
 }
